--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
     <main>
       <section>
         <article>
-          めんだこ
+          おし
+          <div id="slideContainer">
+     　　　<ul class="slider">
+       　　<li><img src="images/IMG_0425.PNG"></li>
+      　　 <li><img src="images/IMG_3683.PNG"></li>
+       　　<li><img src="images/IMG_4205.PNG"></li>
+   　　　  </ul>
+　　　　　</div>
         </article>
         <article>
           article 02
@@ -41,12 +48,4 @@
     </footer>
   </div>
 </body>
-<div id="slideContainer">
-     <ul class="slider">
-       <li><img src="images/01.jpg"></li>
-       <li><img src="images/02.jpg"></li>
-       <li><img src="images/03.jpg"></li>
-       <li><img src="images/04.jpg"></li>
-     </ul>
-</div>
 </html>
